[project]
name = 'KnapsackPrototype'
requires-python = ">=3.12"
version = '2025.09'

dependencies = []
authors = [
    {name = "Stefano Pilosio", email = 'stefano.pilosio@studenti.unimi.it'},
]

readme = "README.md"
license = 'GPL-3.0-or-later'
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = 'https://github.com/RandDouble/AlgoritmiStruttureDati2025.git'
Repository = 'https://github.com/RandDouble/AlgoritmiStruttureDati2025.git'

[tool.ruff.lint]
# Enable flake8-bugbear
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff]
line-length = 100
